# domo-wot-bridge

./: .gitignore  Cargo.toml  README.md  cross-compile.sh
.github/workflows/: cross.yaml  domo-wot-bridge.yml
docker/: Dockerfile-OpenWrt  Dockerfile-amd64
src/: bleutils.rs  command_parser.rs  dhtmanager.rs  globalshellymanager.rs  main.rs  messages.rs  shellymanager.rs  topic_from_actuator_topic.rs  utils.rs  wssmanager.rs
