[package]
name = "domo-wot-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
vendored = ["reqwest/native-tls-vendored", "tokio-tungstenite/native-tls-vendored"]

[dependencies]
axum = { version = "0.5.6", features = ["ws"] }
axum-server = { version = "0.3", features = ["tls-rustls"] }
axum-auth = "0.3.0"
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "1.19.0", features = ["full", "time"] }
tokio-tungstenite = { version = "0.17.1", features = ["native-tls"] }
url = "2.2.2"
futures = "0.3.24"
futures-util = "0.3.24"
reqwest = {version = "0.11.10", features = ["json"] }
mdns = "3.0.0"
base64 = "0.13.0"
native-tls = "0.2.10"
tower-http = { version = "0.3.0", features = ["cors"] }
ccm = "0.5.0"
aead = {version = "0.5.1", features=["alloc"] }
aes = "0.8.1"
hex-literal = "0.3.4"
hex = "0.4.3"

